src/snapshots/raoul__tests__get_ast@missing-return-if.ra.snap
---
source: src/tests.rs
expression: ast
input_file: src/examples/invalid/static/missing-return-if.ra
---
Main(([], [
    Function(test, INT, [], [
        Decision(BinaryOperation(Lt, Integer(1), Integer(2)), [Return(Integer(1))], None),
    ]),
], [
    Assignment(false, Id(a), FunctionCall(test, [])),
    Write([Id(a)]),
]))
