src/snapshots/raoul__tests__get_ast@redefine-arg-type.ra.snap
---
source: src/tests.rs
expression: ast
input_file: src/examples/invalid/static/redefine-arg-type.ra
---
Main(([], [
    Function(test, Void, [Argument(Float, a)], [
        Assignment(false, Id(a), Bool(false)),
    ]),
], [
    FunctionCall(test, [Float(1)]),
]))
