src/snapshots/raoul__tests__get_ast@returns-condition.ra.snap
---
source: src/tests.rs
expression: ast
input_file: src/examples/valid/returns-condition.ra
---
Main(([
    Function(test, INT, [], [
        Decision(BinaryOperation(Lt, Integer(1), Integer(2)), [Return(Integer(1))], None),
        Return(Integer(2)),
    ]),
    Function(second_test, INT, [], [
        Decision(BinaryOperation(Lt, Integer(1), Integer(2)), [Return(Integer(3))], Some(Decision(BinaryOperation(Lt, Integer(1), Integer(3)), [Return(Integer(4))], Some(ElseBlock([Return(Integer(5))]))))),
    ]),
], [
    Write([FunctionCall(test, []), FunctionCall(second_test, [])]),
]))
