src/snapshots/raoul__tests__get_ast@unexistant-column.ra.snap
---
source: src/tests.rs
expression: ast
input_file: src/examples/invalid/dynamic/unexistant-column.ra
---
Main(([], [], [
    Assignment(false, Id(dataframe), ReadCSV(String(song_data_clean.csv))),
    Assignment(false, Id(avg), UnaryDataframeOp(Average, dataframe, String(why))),
    Write([Id(avg)]),
]))
