src/snapshots/raoul__tests__get_ast@while-return.ra.snap
---
source: src/tests.rs
expression: ast
input_file: src/examples/valid/while-return.ra
---
Main(([
    Function(test, INT, [], [
        Assignment(false, Id(a), Integer(1)),
        While(BinaryOperation(Lt, Id(a), Integer(10)), [Write([Id(a)]), Assignment(false, Id(a), BinaryOperation(Sum, Id(a), Integer(1)))]),
        Return(Id(a)),
    ]),
], [
    Write([FunctionCall(test, [])]),
]))
