src/snapshots/raoul__tests__get_ast@while.ra.snap
---
source: src/tests.rs
expression: ast
input_file: src/examples/valid/while.ra
---
Main(([], [
    Assignment(false, Id(a), Integer(1)),
    While(BinaryOperation(Lt, Id(a), Integer(10)), [Assignment(false, Id(a), BinaryOperation(Sum, Id(a), Integer(1)))]),
    Write([Id(a)]),
]))
