src/snapshots/raoul__tests__get_ast@wrong-arg-type.ra.snap
---
source: src/tests.rs
expression: ast
input_file: src/examples/invalid/static/wrong-arg-type.ra
---
Main(([], [
    Function(test, Void, [Argument(String, a)], [
        Write([Id(a)]),
    ]),
], [
    FunctionCall(test, [Bool(false)]),
]))
