src/snapshots/raoul__tests__get_ast@wrong-args-amount.ra.snap
---
source: src/tests.rs
expression: ast
input_file: src/examples/invalid/static/wrong-args-amount.ra
---
Main(([
    Function(test, VOID, [Argument(STRING, a)], [
        Write([Id(a)]),
    ]),
], [
    FunctionCall(test, []),
]))
